--- a/app/src/main/res/layout/activity_logged_in.xml
+++ b/app/src/main/res/layout/activity_logged_in.xml
@@ -1,60 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/etHRV"
+    <!-- Układ nadrzędny do zarządzania Toolbar i treścią -->
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="HRV" />
+        android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/etRestingHeartRate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Tętno spoczynkowe" />
+        <!-- Toolbar -->
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
 
-    <EditText
-        android:id="@+id/etWeight"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Waga" />
+        <!-- Treść ekranu -->
+        <LinearLayout
+            android:id="@+id/content_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="16dp"
+            android:layout_marginTop="?attr/actionBarSize"
+            android:paddingTop="12dp">
 
-    <EditText
-        android:id="@+id/etBedtime"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Godzina zaśnięcia" />
+            <EditText
+                android:id="@+id/etHRV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="HRV" />
 
-    <EditText
-        android:id="@+id/etWakeupTime"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Godzina obudzenia" />
+            <EditText
+                android:id="@+id/etRestingHeartRate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Tętno spoczynkowe" />
 
-    <Button
-        android:id="@+id/btnSaveData"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Zapisz dane" />
+            <EditText
+                android:id="@+id/etWeight"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Waga" />
 
-    <Button
-        android:id="@+id/btnViewData"
+            <EditText
+                android:id="@+id/etBedtime"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Godzina zaśnięcia" />
+
+            <EditText
+                android:id="@+id/etWakeupTime"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Godzina obudzenia" />
+
+            <Button
+                android:id="@+id/btnSaveData"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Zapisz dane" />
+
+            <Button
+                android:id="@+id/btnViewData"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="Pokaż dane" />
+
+            <Button
+                android:id="@+id/btnLogout"
+                android:layout_width="129dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="Wyloguj" />
+
+        </LinearLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+    <!-- Menu boczne -->
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Pokaż dane"
-        android:layout_below="@id/btnSaveData"
-        android:layout_marginTop="16dp"/>
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:menu="@menu/drawer_menu" />
 
-    <Button
-        android:id="@+id/btnLogout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Wyloguj"
-        android:layout_below="@id/btnViewData"
-        android:layout_marginTop="16dp"/>
-
-</LinearLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
